Bug 463627 - Audio playback stops after some seconds on Linux - r=kinetik sr=roc