content/media/video/public/nsAudioStream.h
@@ -40,6 +40,7 @@
 
 #include "nscore.h"
 #include "prlog.h"
+#include "nsTArray.h"
 
 extern PRLogModuleInfo* gAudioStreamLog;
 
@@ -116,6 +117,12 @@ class nsAudioStream
   PRInt64 mSamplesBuffered;
 
   SampleFormat mFormat;
+
+  // When a Write() request is made, and the number of samples
+  // requested to be written exceeds the buffer size of the audio
+  // backend, the remaining samples are stored in this variable. They
+  // will be written on the next Write() request.
+  nsTArray<short> mBufferOverflow;
 
   PRPackedBool mPaused;
 };
